# mkdocs-code-runner

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  package.json  pyproject.toml  tox.ini
.github/workflows/: build.yaml
src/mkdocs_code_runner/: __init__.py  lib.py  plugin.py
tests/: __init__.py  conftest.py  test_lib.py
tests/data/: sample.md
tests/integration/: __init__.py
tests/unit/: __init__.py
