[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.black]
line-length = 100

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "if sys.version_info.*"
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = ["**/plugin.py"]
source = ["mkdocs_code_runner"]

[tool.poetry]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
description = "Mkdocs plugin for converting JavaScript code into runnable scripts."
homepage = "https://github.com/wolfgangwazzlestrauss/mkdocs-code-runner"
keywords = []
license = "MIT"
name = "mkdocs-code-runner"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.8.2"
mkdocs = "^1.1"
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = { version = "^5.0.1", extras = ["toml"] }
flake8 = "^3.7.9"
mypy = "^0.761"
pre-commit = "^1.21.0"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pytest-watch = "^4.2.0"
toml = "^0.10.0"
tox = "^3.14.3"

[tool.poetry.plugins."mkdocs.plugins"]
"mkdocs-code-runner" = "mkdocs_code_runner.plugin:CodeRunner"
