[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.0"]

[tool.black]
line-length = 80

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "if sys.version_info.*"
]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = ["**/plugin.py"]
source = ["mkdocs_code_runner"]

[tool.poetry]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3.6"]
description = "Mkdocs plugin for converting JavaScript code into runnable scripts."
homepage = "https://github.com/wolfgangwazzlestrauss/mkdocs-code-runner"
keywords = []
license = "MIT"
name = "mkdocs-code-runner"
readme = "README.md"
version = "0.0.2"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.9.3"
mkdocs = "^1.1.2"
python = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = { version = "^5.3.0", extras = ["toml"] }
flake8 = "^3.8.4"
mypy = "^0.782"
pre-commit = "^2.7.1"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
toml = "^0.10.1"
tox = "^3.20.0"

[tool.poetry.plugins."mkdocs.plugins"]
"mkdocs-code-runner" = "mkdocs_code_runner.plugin:CodeRunner"
